--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <script type="module" src="./js/1-gallety.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
